Check STDIN for data or named pipe on `iptb run`. If both empty, exit.
Also mattn/go-shellwords -> gxed/go-shellwords.

License: MIT
Signed-off-by: David Grisham <dgrisham@mines.edu>

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
       "version": "0.0.1"
     },
     {
-      "author": "dgrisham",
-      "hash": "QmWnA5hxsXLWGSD2Wh16d1c4FPVcs4Qm4xwPiwsJdXgkFX",
+      "author": "mattn",
+      "hash": "QmbgMitQCJBeteUr9jGMyTRFjhZQjXKW5Kif6UdK4aW6W6",
       "name": "go-shellwords",
       "version": "0.0.0"
     }
